<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about__alc">About_ALC</string>
    <string name="title_activity_my__profile">My Profile</string>
    <string name="Slack">Slack Username: @RaphaelKwesi</string>
    <string name="Phone">Phone Number: +233245040551</string>
    <string name="Email">Email: raphaelkwesi@gmail.com</string>
    <string name="Country">Country: Ghana</string>
    <string name="Track">Track: Android</string>
    <string name="ProfileName">Raphael Kwesi Agbozo</string>
    <string name="ProfileImage">Profile Image</string>
</resources>
